# server.js
@@ -2,6 +2,7 @@ import express from 'express'
 import usuarioRoute from './routes/usuariosRoute.js'
 import perfilRoute from './routes/perfilRoute.js'
 import loginRoute from './routes/loginRoute.js'
+import imovelRoute from './routes/imovelRoute.js'
 
 import { createRequire } from 'module';
 const require = createRequire(import.meta.url);
@@ -20,6 +21,7 @@ app.use('/docs', swaggerUi.serve, swaggerUi.setup(outputJson));
 app.use('/usuarios', usuarioRoute);
 app.use('/perfil', perfilRoute);
 app.use('/login', loginRoute);
+app.use('/imovel', imovelRoute);
 
 app.listen(5000, function() {
     console.log("backend em execução");
