# swagger_output.json
@@ -40,7 +40,9 @@
         },
         "security": [
           {
-            "apiKeyAuth": []
+            "apiKeyAuth": [
+              "PFSII"
+            ]
           }
         ]
       },
@@ -78,7 +80,9 @@
         },
         "security": [
           {
-            "apiKeyAuth": []
+            "apiKeyAuth": [
+              "PFSII"
+            ]
           }
         ],
         "requestBody": {
@@ -126,7 +130,9 @@
         },
         "security": [
           {
-            "apiKeyAuth": []
+            "apiKeyAuth": [
+              "PFSII"
+            ]
           }
         ],
         "requestBody": {
@@ -181,7 +187,9 @@
         },
         "security": [
           {
-            "apiKeyAuth": []
+            "apiKeyAuth": [
+              "PFSII"
+            ]
           }
         ]
       }
@@ -226,7 +234,9 @@
         },
         "security": [
           {
-            "apiKeyAuth": []
+            "apiKeyAuth": [
+              "PFSII"
+            ]
           }
         ]
       }
@@ -275,7 +285,9 @@
         },
         "security": [
           {
-            "apiKeyAuth": []
+            "apiKeyAuth": [
+              "PFSII"
+            ]
           }
         ],
         "requestBody": {
@@ -323,7 +335,9 @@
         },
         "security": [
           {
-            "apiKeyAuth": []
+            "apiKeyAuth": [
+              "PFSII"
+            ]
           }
         ]
       }
@@ -356,6 +370,38 @@
             }
           }
         }
+      }
+    },
+    "/imovel/": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "chaveapi",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": [
+              "PFSII"
+            ]
+          }
+        ]
       }
     }
   },
